--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Когнитивные искажения Den Drop</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Когнитивные искажения Den Drop<title></title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
 
+<body>
+    <header class="back">
+<section class="section">
+    <h1>
+        Когнитивные<br>
+        искажения<br>
+        <span class="dark">в програмировании</span>
+    </h1>
+    <img class="header-image" src="./images/main.png" alt="человечек с ноутом" height="525">
+    <div class="text-2">
+        <div class="text">
+            Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+        </div>
+        <div class="text">
+            <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.
+            </p>
+            <p>
+            Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+            </p>
+            <a href="#" class="btn mt-1">Подробнее</a>
+        </div>
+    </div>
+</section>
+    </header>
 </body>
 </html>
