--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +7,118 @@
 <title>Когнитивные искажения Den Drop<title></title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-
-<body>
-    <header class="back">
-<section class="section">
-    <h1>
-        Когнитивные<br>
-        искажения<br>
-        <span class="dark">в програмировании</span>
-    </h1>
-    <img class="header-image" src="./images/main.png" alt="человечек с ноутом" height="525">
-    <div class="text-2">
-        <div class="text">
+<body class="main">
+    <header class="header-wrap back">
+        <div class="title-wrap">
+            <h1>
+            <span class="orange">Когнитивные<br>искажения</span>
+            <br>в программировании
+            </h1>
+         </div>
+        <img src="./images/main.png" alt="main image" class="title-image" ;>
+    <div class="text-wrap">
+        <div class="text-left">
             Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
         </div>
-        <div class="text">
-            <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.
-            </p>
-            <p>
-            Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
-            </p>
-            <a href="#" class="btn mt-1">Подробнее</a>
+        <div class="text-right">
+            <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
+            <br>
+            <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+            <a href="#" class="header-bottom-link">
+                ПОДРОБНЕЕ
+            </a>
+        </div>
+    </div>
+    </header>
+<main>
+    <section id="video">
+    <div class="second-slide">
+        <h1>
+            Что же это такое,<br><span class="orange">когнитивные искажения?</span>
+        </h1>
+        <p>Что такое когнитивные искажения. Petrovna Channel</p>
+        <iframe class="video" width="919" height="569" frameborder="0" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
+        <div class="second-footer"></div>
+    </div>
+    </section>
+    <navigation>
+        <section id="navigator">
+    <div class="navigator-slide back-nav-slide">
+<h2><span class="orange">5 когнитивных искажений</span><br><span class="white">o существовании которых стоит помнить</span></h2>
+    </div>
+    <div class="navigator-slide">
+        <div class="number-nav"><h1>1</h1></div>
+        <h3 class="orange">Эффект ИКЕА</h3>
+        <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+    </div>
+    <div class="navigator-slide">
+        <div class="number-nav"><h1>2</h1></div>
+        <h3 class="orange">Преждевременная оптимизация</h3>
+        <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+    </div>
+    <div class="navigator-slide">
+        <div class="number-nav"><h1>3</h1></div>
+        <h3 class="orange">Искажение новизны</h3>
+        <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+    </div>
+    <div class="navigator-slide">
+        <div class="number-nav"><h1>4</h1></div>
+        <h3 class="orange">Гиперболическое обесценивание</h3>
+        <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+    </div>
+    <div class="navigator-slide">
+        <div class="number-nav"><h1>5</h1></div>
+        <h3 class="orange">Ошибка планирования</h3>
+        <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
+    </div>
+        </section>
+    </navigation>
+<section id="ikea-effect" class="back">
+    <div class="container">
+        <div class="ikea-image">
+            <img src="./images/1.png" alt="1 image" ;>
+        </div>
+        <div>
+            <p>Когнитивные искажения</p>
+            <h1>Эффект ИКЕА</h1><br>
+            <h3>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
+        </div>
+    </div>
+    <div class="line">
+        <span class="line-text">КАК ПРОЯВЛЯЕТСЯ</span>
+    </div>
+    <div class="text-wrap">
+        <div class="text-left">
+            Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.
+        </div>
+        <div class="text-right">
+            Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.
         </div>
     </div>
 </section>
-    </header>
+    <section id="premature-optimization" class="back">
+        <div>
+        <div class="container">
+            <div>
+                <p class="white">Когнитивные искажения</p>
+                <h1 class="white">Преждевременная оптимизация</h1><br>
+                <h3 class="white">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</h3>
+            </div>
+            <div class="ikea-image">
+                <img src="./images/2.png" alt="2 image" ;>
+            </div>
+        </div>
+            <div class="line">
+                <span class="line-text">КАК ПРОЯВЛЯЕТСЯ</span>
+            </div>
+            <div class="text-wrap">
+                <div class="text-left white">
+                    Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.                </div>
+                <div class="text-right white">
+                    Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
