--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
             <br>в программировании
             </h1>
          </div>
-        <img src="./images/main.png" alt="main image" class="title-image" ;>
+        <img src="./images/main.png" alt="main image" class="title-image">
     <div class="text-wrap">
         <div class="text-left">
             Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
@@ -37,12 +37,11 @@
             Что же это такое,<br><span class="orange">когнитивные искажения?</span>
         </h1>
         <p>Что такое когнитивные искажения. Petrovna Channel</p>
-        <iframe class="video" width="919" height="569" frameborder="0" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
+        <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
         <div class="second-footer"></div>
     </div>
     </section>
-    <navigation>
-        <section id="navigator">
+        <section id="navigation">
     <div class="navigator-slide back-nav-slide">
 <h2><span class="orange">5 когнитивных искажений</span><br><span class="white">o существовании которых стоит помнить</span></h2>
     </div>
@@ -72,11 +71,10 @@
         <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
     </div>
         </section>
-    </navigation>
 <section id="ikea-effect" class="back">
     <div class="container">
         <div class="ikea-image">
-            <img src="./images/1.png" alt="1 image" ;>
+            <img src="./images/1.png" alt="1 image">
         </div>
         <div>
             <p>Когнитивные искажения</p>
@@ -105,7 +103,7 @@
                 <h3 class="white">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</h3>
             </div>
             <div class="ikea-image">
-                <img src="./images/2.png" alt="2 image" ;>
+                <img src="./images/2.png" alt="2 image">
             </div>
         </div>
             <div class="line">
