--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Когнитивные искажения </title>
+  <title>Когнитивные искажения levanse</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -255,7 +255,7 @@
       </div>
     </div>
     <div class="footer-contact">
-      <div class="footer-text">© 2023 Каплин Денис</div>
+      <div class="footer-text">© 2020 Константин Константинопольский</div>
       <div class="footer-text">
         По материалам статьи
         <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b" target="_blank">
